Fixed search icon overlap

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -8456,6 +8456,12 @@ body.maintenance-page #footer-container #footer {
     width: 220px;
   }
 }
+#block-chm-search-chm-search:hover .btn-search {
+  right: 30px;
+}
+#block-chm-search-chm-search:hover input[type="text"] {
+  padding-right: 30px;
+}
 .region-admin-shortcuts #block-system-user-menu .menu:before {
   display: inline-block;
 }
