--- a/docroot/sites/all/themes/chm_theme_kit/less/default.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/default.less
@@ -212,3 +212,12 @@ body.maintenance-page {
     }
   }
 }
+
+#block-chm-search-chm-search:hover {
+  .btn-search {
+    right: 30px;
+  }
+  input[type="text"] {
+    padding-right: 30px;
+  }
+}
